@@ -1,6 +1,5 @@
 package discord.structures.components;
 
-import java.util.Arrays;
 import java.util.List;
 
 import sj.SjObject;
@@ -10,14 +9,19 @@ public class ActionRow extends MessageComponent {
 
 	public ActionRow(final SjObject data) {
 		super(data);
+		if (type != MessageComponent.Type.ACTION_ROW)
+			throw new IllegalArgumentException();
 		components = data.getObjectArray("components").stream()
-			.map((final var rawComponent) -> MessageComponent.construct(rawComponent))
-			.toList();
+				.map((final var rawComponent) -> MessageComponent.construct(rawComponent))
+				.toList();
 	}
 
 	public ActionRow(final MessageComponent... components) {
 		super(Type.ACTION_ROW);
-		this.components = Arrays.asList(components);
+		for (final var component : components)
+			if (component.type == MessageComponent.Type.ACTION_ROW)
+				throw new IllegalArgumentException("Action rows cannot contain action rows");
+		this.components = List.of(components);
 	}
 
 	@Override
